--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 
 <head>
+    <meta name="google-site-verification" content="qh9s4OMKyNdKD3SJGr2ZYO776TZj7bAqkFtRrRAkBC8" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="ProtonMail Login - Secure Email Service">
     <title>How To Login ProtonMail Account? Step-By-Step</title>
     <meta name="description" content="Follow this simple step-by-step guide to log in to your ProtonMail account securely. Access your encrypted email with ease and privacy in just a few clicks.">
     <meta name="keywords" content="protonmail login, protonmail account, protonmail login account, protonmail account login, login protonmail, login protonmail account, how to login protonmail, how to login login protonmail account, login my protonmail account, how to login my protonmail account, protonmail login my account, protonmail sign in, protonmail sign in account, protonmail account sign in, sign in protonmail account, protonmail sign in my account">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="ProtonMail Account">
     <meta name="robots" content="index, follow">
-    <title>ProtonMail Login</title>
+  
     <link rel="stylesheet" href="styles.css">
     <style>
         /* General Styles */
@@ -94,6 +95,7 @@ body {
     border-radius: 6px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     background-color:#0f1c2e;
+    color:white;
 }
 
 .btn-submit {
